test/board-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iaas-board
  namespace: test
spec:
  selector:
    app: iaas-board
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
