test/db-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: db
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: data
          hostPath:
            path: "/data/db"
      containers:
        - name: mariadb
          image: mariadb:10.2.12
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: data
          env:
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: db-secret
                  key: password
